# Store

./: .dockerignore  .gitignore  Dockerfile  Makefile  docker-compose.yaml  pyproject.toml
kubernetes/: app-k8s.yaml  ingress-k8s.yaml  postgres-k8s.yaml
products/: admin.py  models.py  urls.py  views.py
products/fixtures/: categories.json  products.json
products/migrations/: 0001_initial.py  0002_basket.py
products/templates/products/: base.html  basket.html  index.html  products.html
store/: settings.py  urls.py  wsgi.py
users/: admin.py  forms.py  views.py
users/migrations/: 0001_initial.py
users/templates/users/: login.html  profile.html  register.html
