[tool.poetry]
name = "store"
version = "0.1.0"
description = ""
authors = ["berezzin <biarezzin@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "3.2.20"
pillow = "^10.0.0"
python-dotenv = "^1.0.0"
gunicorn = "^21.2.0"
psycopg2-binary = "^2.9.7"
uvicorn = "^0.23.2"
whitenoise = "^6.5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
